Corrected the vertical align top issue

--- a/Resources/screens/stylefeed/less/custom.less
+++ b/Resources/screens/stylefeed/less/custom.less
@@ -94,6 +94,7 @@ body * {
 	// width: 42%;
 	width: 150px;
 	display: inline-block;
+	vertical-align: top;
 	margin-right: 5px;
 	color: @body-text;
 	background: @bg-light;
